force-app/main/default/objects/QuoteLineItem/fields/AcessoryGroup__c.field-meta.xml
<CustomField>
    <fullName>AcessoryGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grupo de Acessorios do kit</label>
    <referenceTo>GrupoAcessorios__c</referenceTo>
    <relationshipLabel>Itens da linha de cotação</relationshipLabel>
    <relationshipName>ParentQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>