force-app/main/default/objects/QuoteLineItem/fields/AcessoryType__c.field-meta.xml
<CustomField>
    <fullName>AcessoryType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo de Acessorios do kit</label>
    <referenceTo>TipoAcessorios__c</referenceTo>
    <relationshipLabel>Itens da linha de cotação</relationshipLabel>
    <relationshipName>ParentQuoteLinesType</relationshipName>
    <type>Lookup</type>
</CustomField>