force-app/main/default/objects/QuoteLineItem/fields/ProdutoSemEstrutura__c.field-meta.xml
<CustomField>
    <fullName>ProdutoSemEstrutura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Produto sem Estrutura?</label>
    <type>Checkbox</type>
</CustomField>